--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="温故而知新" />
   </head>
   <body>
+    <div id="like_button_container"></div>
     <div class="main">
       <div class="main-content">
         <div class="site-header">
@@ -117,5 +118,9 @@
 
       </div>
     </div>
+
+    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="like_button.js"></script>
   </body>
 </html>
