--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="温故而知新" />
   </head>
   <body>
-    <div id="like_button_container"></div>
+     
     <div class="main">
       <div class="main-content">
         <div class="site-header">
@@ -119,7 +119,25 @@
       </div>
     </div>
 
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <p>
+      This is the first comment.
+      <!-- We will put our React component inside this div. -->
+      <div class="like_button_container" data-commentid="1"></div>
+    </p>
+
+    <p>
+      This is the second comment.
+      <!-- We will put our React component inside this div. -->
+      <div class="like_button_container" data-commentid="2"></div>
+    </p>
+
+    <p>
+      This is the third comment.
+      <!-- We will put our React component inside this div. -->
+      <div class="like_button_container" data-commentid="3"></div>
+    </p>
+
+    <script src="https://unpkg.com/react@17/umd/production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="like_button.js"></script>
   </body>
